# HangManGame

./: .gitignore  CMakeLists.txt  Hangman  Hangman.cpp  Hangman.hpp  HangmanLinuxExecutable  README.md  hangmangameClass.cpp  hangmaninmain.cpp  main.cpp  word_tool.py  wordlist_dictionary.txt
Resources/: wordlist_dictionary.txt
src/: Hangman.cpp  Hangman.hpp  main.cpp
